[gd_scene load_steps=22 format=2]

[ext_resource path="res://Sprites/Buttons/Lesson/LessonNormal.png" type="Texture" id=1]
[ext_resource path="res://Sprites/Buttons/Lesson/ExampleHover.png" type="Texture" id=2]
[ext_resource path="res://Sprites/Buttons/Lesson/ExerciseHover.png" type="Texture" id=3]
[ext_resource path="res://Placeholder/9patch.png" type="Texture" id=4]
[ext_resource path="res://Placeholder/BG2.png" type="Texture" id=5]
[ext_resource path="res://Sprites/Buttons/Spot Buttons/BeachNormal.png" type="Texture" id=6]
[ext_resource path="res://Sprites/Buttons/Spot Buttons/LakeNormal.png" type="Texture" id=7]
[ext_resource path="res://Sprites/Buttons/Lesson/ExampleNormal.png" type="Texture" id=8]
[ext_resource path="res://Sprites/Buttons/Lesson/LessonHover.png" type="Texture" id=9]
[ext_resource path="res://Sprites/Buttons/Spot Buttons/MountainNormal.png" type="Texture" id=10]
[ext_resource path="res://Fonts/Dynamic Fonts/Sub Header.tres" type="DynamicFont" id=11]
[ext_resource path="res://Fonts/Dynamic Fonts/Lesson Content.tres" type="DynamicFont" id=12]
[ext_resource path="res://Fonts/Dynamic Fonts/Normal Text.tres" type="DynamicFont" id=13]
[ext_resource path="res://Fonts/ProductSans-Bold.ttf" type="DynamicFontData" id=14]
[ext_resource path="res://Object Scenes/BackButton.tscn" type="PackedScene" id=15]
[ext_resource path="res://Object Scenes/InOverlay.tscn" type="PackedScene" id=16]
[ext_resource path="res://Sprites/Buttons/Lesson/ExerciseNormal.png" type="Texture" id=17]
[ext_resource path="res://Display Scenes/LessonThree.gd" type="Script" id=18]
[ext_resource path="res://Sprites/Buttons/Interface Buttons/Audio.png" type="Texture" id=19]
[ext_resource path="res://Sprites/Buttons/Interface Buttons/AudioHover.png" type="Texture" id=20]

[sub_resource type="DynamicFont" id=1]
size = 56
outline_size = 3
outline_color = Color( 0.862745, 0.576471, 0.239216, 1 )
font_data = ExtResource( 14 )

[node name="LessonThree" type="Control"]
anchor_right = 1.0
anchor_bottom = 1.0
rect_pivot_offset = Vector2( -1032, -142 )
script = ExtResource( 18 )

[node name="BG" type="TextureRect" parent="."]
anchor_right = 1.0
anchor_bottom = 1.0
texture = ExtResource( 5 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="MarginContainer" type="MarginContainer" parent="."]
anchor_right = 1.0
anchor_bottom = 1.0
margin_left = 50.0
margin_top = 50.0
margin_right = -242.0
margin_bottom = -50.0
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Main" type="VBoxContainer" parent="MarginContainer"]
margin_right = 988.0
margin_bottom = 641.0
alignment = 1
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Title" type="Label" parent="MarginContainer/Main"]
margin_right = 988.0
margin_bottom = 69.0
custom_fonts/font = SubResource( 1 )
text = "Asking Friend's Holiday Activity"
align = 1
valign = 1

[node name="Subtitle" type="Label" parent="MarginContainer/Main"]
margin_top = 73.0
margin_right = 988.0
margin_bottom = 137.0
rect_min_size = Vector2( 0, 64 )
custom_fonts/font = ExtResource( 13 )
text = "Menanyakan Aktivitas Liburan Teman"
align = 1

[node name="LessonContent" type="RichTextLabel" parent="MarginContainer/Main"]
margin_top = 141.0
margin_right = 988.0
margin_bottom = 641.0
rect_min_size = Vector2( 0, 500 )
custom_fonts/bold_font = ExtResource( 12 )
custom_fonts/normal_font = ExtResource( 13 )
bbcode_enabled = true
bbcode_text = "Untuk menanyakan aktivitas yang dilakukan seseorang di masa lalu, kalimat tanya harus menggunakan [color=lime][b]Past Tense[/b][/color] (Verb 2). Perhatikan pola perubahan bentuk kata kerja [color=yellow]Regular[/color] (akhiran -ed) dan [color=yellow]Irregular[/color].
Contoh: Do (melakukan) >> [color=lime]Did[/color] (irregular)

[b]Pola kalimat tanya:[/b]
What [color=lime]did[/color] + [color=aqua]subject[/color] (you, he, she, nama orang) + do in + [color=yellow]keterangan waktu[/color] (last holiday, last week, dll.)
Contoh: \"What [color=lime]did[/color] [color=aqua]you[/color] do in [color=yellow]the last holiday[/color]?\""
text = "Untuk menanyakan aktivitas yang dilakukan seseorang di masa lalu, kalimat tanya harus menggunakan Past Tense (Verb 2). Perhatikan pola perubahan bentuk kata kerja Regular (akhiran -ed) dan Irregular.
Contoh: Do (melakukan) >> Did (irregular)

Pola kalimat tanya:
What did + subject (you, he, she, nama orang) + do in + keterangan waktu (last holiday, last week, dll.)
Contoh: \"What did you do in the last holiday?\""
fit_content_height = true

[node name="ExampleContent" type="RichTextLabel" parent="MarginContainer/Main"]
visible = false
margin_top = 141.0
margin_right = 988.0
margin_bottom = 641.0
rect_min_size = Vector2( 0, 500 )
custom_fonts/bold_font = ExtResource( 12 )
custom_fonts/normal_font = ExtResource( 13 )
bbcode_enabled = true
bbcode_text = "[b]Conversation Example:[/b]
Tony: \"Hi John, what [color=lime]did[/color] [color=aqua]you[/color] do in [color=yellow]your last holiday[/color]?\"
John: \"I went fishing at the lake\"

Audrey: \"Lucy, what [color=lime]did[/color] [color=aqua]you[/color] do in [color=yellow]the last weekend?[/color]\"
Lucy: \"I went shopping at the mall\""
text = "Conversation Example:
Tony: \"Hi John, what did you do in your last holiday?\"
John: \"I went fishing at the lake\"

Audrey: \"Lucy, what did you do in the last weekend?\"
Lucy: \"I went shopping at the mall\""
fit_content_height = true

[node name="TextureButton" type="TextureButton" parent="MarginContainer/Main/ExampleContent"]
anchor_left = 1.0
anchor_top = 0.5
anchor_right = 1.0
anchor_bottom = 0.5
margin_left = -220.0
margin_top = -192.0
margin_right = -156.0
margin_bottom = -128.0
texture_normal = ExtResource( 19 )
texture_pressed = ExtResource( 19 )
texture_hover = ExtResource( 20 )

[node name="TextureButton2" type="TextureButton" parent="MarginContainer/Main/ExampleContent"]
anchor_left = 1.0
anchor_top = 0.5
anchor_right = 1.0
anchor_bottom = 0.5
margin_left = -220.0
margin_top = -32.0
margin_right = -156.0
margin_bottom = 32.0
texture_normal = ExtResource( 19 )
texture_pressed = ExtResource( 19 )
texture_hover = ExtResource( 20 )

[node name="ExerciseContent" type="HBoxContainer" parent="MarginContainer/Main"]
visible = false
margin_top = 266.0
margin_right = 988.0
margin_bottom = 495.0
alignment = 1

[node name="VBoxContainer3" type="VBoxContainer" parent="MarginContainer/Main/ExerciseContent"]
margin_left = 32.0
margin_right = 956.0
margin_bottom = 229.0
rect_min_size = Vector2( 400, 0 )
alignment = 1

[node name="Label" type="Label" parent="MarginContainer/Main/ExerciseContent/VBoxContainer3"]
margin_right = 924.0
margin_bottom = 69.0
custom_fonts/font = ExtResource( 11 )
text = "Exercise!"
align = 1

[node name="Label2" type="Label" parent="MarginContainer/Main/ExerciseContent/VBoxContainer3"]
margin_top = 73.0
margin_right = 924.0
margin_bottom = 229.0
custom_fonts/font = ExtResource( 13 )
text = "Ask 5 of your friends about their activity in the last weekend!
Tanyakan 5 orang temanmu tentang aktivitas mereka di akhir pekan
yang lalu!"
align = 1

[node name="VBoxContainer" type="VBoxContainer" parent="MarginContainer/Main/ExerciseContent"]
visible = false
margin_left = 571.0
margin_right = 821.0
margin_bottom = 512.0
rect_min_size = Vector2( 250, 0 )

[node name="TextureRect" type="TextureRect" parent="MarginContainer/Main/ExerciseContent/VBoxContainer"]
margin_right = 250.0
margin_bottom = 200.0
rect_min_size = Vector2( 200, 200 )
texture = ExtResource( 4 )
expand = true
stretch_mode = 6

[node name="TextureRect" type="TextureRect" parent="MarginContainer/Main/ExerciseContent/VBoxContainer/TextureRect"]
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
margin_left = -96.0
margin_top = -96.0
margin_right = 96.0
margin_bottom = 96.0
texture = ExtResource( 10 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Label" type="Label" parent="MarginContainer/Main/ExerciseContent/VBoxContainer"]
margin_top = 204.0
margin_right = 250.0
margin_bottom = 254.0
custom_fonts/font = ExtResource( 13 )
text = "Gunung"
align = 1

[node name="TextureRect2" type="TextureRect" parent="MarginContainer/Main/ExerciseContent/VBoxContainer"]
margin_top = 258.0
margin_right = 250.0
margin_bottom = 458.0
rect_min_size = Vector2( 200, 200 )
texture = ExtResource( 4 )
expand = true
stretch_mode = 6

[node name="TextureRect" type="TextureRect" parent="MarginContainer/Main/ExerciseContent/VBoxContainer/TextureRect2"]
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
margin_left = -96.0
margin_top = -96.0
margin_right = 96.0
margin_bottom = 96.0
texture = ExtResource( 7 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Label2" type="Label" parent="MarginContainer/Main/ExerciseContent/VBoxContainer"]
margin_top = 462.0
margin_right = 250.0
margin_bottom = 512.0
custom_fonts/font = ExtResource( 13 )
text = "Danau"
align = 1

[node name="VBoxContainer2" type="VBoxContainer" parent="MarginContainer/Main/ExerciseContent"]
visible = false
margin_left = 590.0
margin_right = 840.0
margin_bottom = 512.0
rect_min_size = Vector2( 250, 0 )

[node name="TextureRect" type="TextureRect" parent="MarginContainer/Main/ExerciseContent/VBoxContainer2"]
margin_right = 250.0
margin_bottom = 200.0
rect_min_size = Vector2( 200, 200 )
texture = ExtResource( 4 )
expand = true
stretch_mode = 6

[node name="TextureRect" type="TextureRect" parent="MarginContainer/Main/ExerciseContent/VBoxContainer2/TextureRect"]
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
margin_left = -96.0
margin_top = -96.0
margin_right = 96.0
margin_bottom = 96.0
texture = ExtResource( 6 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Label" type="Label" parent="MarginContainer/Main/ExerciseContent/VBoxContainer2"]
margin_top = 204.0
margin_right = 250.0
margin_bottom = 254.0
custom_fonts/font = ExtResource( 13 )
text = "Bioskop"
align = 1

[node name="TextureRect2" type="TextureRect" parent="MarginContainer/Main/ExerciseContent/VBoxContainer2"]
margin_top = 258.0
margin_right = 250.0
margin_bottom = 458.0
rect_min_size = Vector2( 200, 200 )
texture = ExtResource( 4 )
expand = true
stretch_mode = 6

[node name="TextureRect" type="TextureRect" parent="MarginContainer/Main/ExerciseContent/VBoxContainer2/TextureRect2"]
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
margin_left = -96.0
margin_top = -96.0
margin_right = 96.0
margin_bottom = 96.0
texture = ExtResource( 6 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Label2" type="Label" parent="MarginContainer/Main/ExerciseContent/VBoxContainer2"]
margin_top = 462.0
margin_right = 250.0
margin_bottom = 512.0
custom_fonts/font = ExtResource( 13 )
text = "Bioskop"
align = 1

[node name="NavButton" type="VBoxContainer" parent="."]
anchor_left = 1.0
anchor_top = 0.5
anchor_right = 1.0
anchor_bottom = 0.5
margin_left = -217.0
margin_top = -292.0
margin_right = -25.0
margin_bottom = 292.0
__meta__ = {
"_edit_group_": true,
"_edit_use_anchors_": false
}

[node name="Lesson" type="TextureButton" parent="NavButton"]
margin_right = 192.0
margin_bottom = 192.0
rect_min_size = Vector2( 192, 192 )
texture_normal = ExtResource( 1 )
texture_pressed = ExtResource( 1 )
texture_hover = ExtResource( 9 )
expand = true
stretch_mode = 3

[node name="Example" type="TextureButton" parent="NavButton"]
margin_top = 196.0
margin_right = 192.0
margin_bottom = 388.0
rect_min_size = Vector2( 192, 192 )
texture_normal = ExtResource( 8 )
texture_pressed = ExtResource( 8 )
texture_hover = ExtResource( 2 )
expand = true
stretch_mode = 3

[node name="Exercise" type="TextureButton" parent="NavButton"]
margin_top = 392.0
margin_right = 192.0
margin_bottom = 584.0
rect_min_size = Vector2( 192, 192 )
texture_normal = ExtResource( 17 )
texture_pressed = ExtResource( 17 )
texture_hover = ExtResource( 3 )
expand = true
stretch_mode = 3

[node name="BackButton" parent="." instance=ExtResource( 15 )]
margin_right = 114.0
margin_bottom = 114.0
targetScene = "LessonMenu"

[node name="InOverlay" parent="." instance=ExtResource( 16 )]
visible = false

[node name="AudioStreamPlayer" type="AudioStreamPlayer" parent="."]

[connection signal="button_down" from="MarginContainer/Main/ExampleContent/TextureButton" to="." method="_on_TextureButton_button_down"]
[connection signal="button_down" from="MarginContainer/Main/ExampleContent/TextureButton2" to="." method="_on_TextureButton2_button_down"]
[connection signal="button_down" from="NavButton/Lesson" to="." method="_on_Lesson_button_down"]
[connection signal="button_down" from="NavButton/Example" to="." method="_on_Example_button_down"]
[connection signal="button_down" from="NavButton/Exercise" to="." method="_on_Exercise_button_down"]
